--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -35,7 +35,7 @@ jobs:
         ports:
           - 8000:8000
       pgvector:
-        image: ankane/pgvector:0.5.1
+        image: ankane/pgvector:v0.5.1
         options: "postgres -c log_statement=all -c log_destination=stderr"
         env:
           ALLOW_RESET: TRUE
