--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3.8"
 services:
   chroma:
-    image: ghcr.io/chroma-core/chroma:latest
+    image: ghcr.io/chroma-core/chroma:0.4.14
     environment:
       - ALLOW_RESET=TRUE
     volumes:
@@ -9,7 +9,7 @@ services:
     ports:
       - "8000:8000"
   pg:
-    image: ankane/pgvector
+    image: ankane/pgvector:v0.5.1
     environment:
       - POSTGRES_PASSWORD=test
       - POSTGRES_USER=test
