--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -38,6 +38,8 @@ jobs:
         image: ankane/pgvector:v0.5.1
         options: "postgres -c log_statement=all -c log_destination=stderr"
         env:
-          ALLOW_RESET: TRUE
+          POSTGRES_PASSWORD: test
+          POSTGRES_USER: test
+          POSTGRES_DB: test
         ports:
           - 5432:5432
