--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
       - index_data:/chroma/.chroma/index
     ports:
       - "8000:8000"
-  pg:
+  pgvector:
     image: ankane/pgvector:v0.5.1
     environment:
       - POSTGRES_PASSWORD=test
